[project]
name = "clean-arch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerberus>=1.3.7",
    "flask>=3.1.0",
    "mysql-connector-python>=9.3.0",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.40",
]
